espresso (0.99.27) UNRELEASED; urgency=low

  * GTK frontend:
    - Set initial Forward button text in glade rather than in code.
    - Change Forward button to say "Install" when on the summary page.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu,  9 Mar 2006 11:16:38 +0000

espresso (0.99.26) dapper; urgency=low

  * GTK frontend:
    - Add a test box to the keymap page. (Note that your keymap isn't
      actually changed in the installer at the moment, so this won't work
      yet.)
    - Display the current time in the format used by the currently-selected
      locale.
  * GTK and KDE frontends:
    - Move the keymap page after the location page, so that in future the
      keymap page can be initialised using data for the selected country.
  * Make espresso.tz.SystemTzInfo.dst() pretend that DST is not in effect if
    we have no DST information, rather than returning the more correct None;
    this allows fromutc() to be used reliably.
  * Use espresso-yaboot to install yaboot on powerpc systems.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu,  9 Mar 2006 08:32:42 +0000

espresso (0.99.25) dapper; urgency=low

  * GTK frontend:
    - Add a format checkbox to the mountpoints page (closes: Malone #32065).
      Requires partman (>= 78ubuntu1+8).
  * Patched up KDE frontend to avoid breaking it too badly (I hope) until
    corresponding UI is added there too.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed,  8 Mar 2006 14:59:41 +0000

espresso (0.99.24) dapper; urgency=low

  * Fix espresso.tz.SystemTzInfo to work for datetime.datetime.now(tzinfo).
  * GTK frontend:
    - Improve headings and spacing on advanced partitioning pages.
    - Remove more text that claims /home will not be formatted.
    - Rearrange help text on advanced partitioning pages to allow for more
      space on the screen where it matters.
    - Show the current time in the selected timezone on the location page.
    - Translate more strings from Spanish to English.