@@ -57,7 +57,7 @@ Description: Ubuntu documentation and help files for Espresso live installer
 Package: espresso-frontend-gtk
 Architecture: any
 Depends: ${misc:Depends}, ${python:Depends}, python-gnome2-extras, python-glade2, gparted (>= 0.1-0ubuntu2), espresso-artwork, espresso-doc, python-gtk2, firefox
-Conflicts: ubuntu-express-frontend-gtk
+Conflicts: ubuntu-express-frontend-gtk, gparted (<<0.1-0ubuntu3)
 Replaces: ubuntu-express-frontend-gtk
 Provides: espresso-frontend
 Description: GTK+ frontend for Espresso live installer
